@@ -14,3 +14,7 @@ Section2:
   _TEST_USERNAME: /QtKzWZfOPukQZ6/XSwb6Ahp28Bj94XONIKc2bYTdgAYYPTadTKSZY7tXfa1zZb9
   _TEST_PASSWORD: ZQcr15qf/5sH189l3gUNfExPk8Ha95DunGsKNEMedAG+5DJgl48nn3cr+aSGOmcjeiJZlvk5coY=
 #
+#
+  CLEAR_TEXT_USERNAME: testuser2
+  CLEAR_TEXT_PASSWORD: changeme2
+#
