@@ -22,3 +22,4 @@
 14-Dec-2019  - V0.27 Improve error reporting for key processing
 14-Dec-2019  - V0.28 Further simplify error reporting for missing or bad security key
 14-Dec-2019  - V0.29 Quiet troubleshooting output
+31-Jan-2020  - V0.30 Add automatic fallback feature for underscore qualified options.
